--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 29
@@ -66,10 +67,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     // FIREBASE
-   // implementation "com.google.firebase:firebase-firestore-ktx:21.4.3"
-    //implementation 'com.firebaseui:firebase-ui-storage:3.1.3'
-    //implementation 'com.google.firebase:firebase-storage:19.1.1'
-    //implementation 'com.google.firebase:firebase-auth:19.3.1'
+    implementation "com.google.firebase:firebase-firestore-ktx:21.5.0"
+    implementation 'com.firebaseui:firebase-ui-storage:3.1.3'
+    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.google.firebase:firebase-auth:19.3.2'
     // PERMISSION
     implementation "org.permissionsdispatcher:permissionsdispatcher:4.6.0"
     kapt "org.permissionsdispatcher:permissionsdispatcher-processor:4.6.0"
