--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
@@ -20,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.google.com/"}
         maven { url 'http://oss.jfrog.org/artifactory/oss-snapshot-local/' }
 
     }
