--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,11 +67,12 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     androidTestImplementation 'androidx.arch.core:core-testing:2.1.0'
     // FIREBASE
-    implementation 'com.google.firebase:firebase-core:17.4.4'
-    implementation "com.google.firebase:firebase-firestore-ktx:21.5.0"
+    implementation 'com.google.firebase:firebase-core:17.5.0'
+    implementation "com.google.firebase:firebase-firestore-ktx:21.6.0"
     implementation 'com.firebaseui:firebase-ui-storage:3.1.3'
     implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
-    implementation 'com.google.firebase:firebase-storage:19.1.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:6.1.0'
+    implementation 'com.google.firebase:firebase-storage:19.2.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
     // PERMISSION
     implementation "org.permissionsdispatcher:permissionsdispatcher:4.6.0"
