--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,6 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
-        android:name=".controller.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -15,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/Anniversaire">
         <activity android:name=".controller.gallery.request.GalleryRequestActivity"></activity>
-        <activity android:name=".controller.gallery.GalleryUserActivity" />
+        <activity android:name=".controller.gallery.user.GalleryUserActivity" />
         <activity android:name=".controller.gallery.GalleryDetailActivity" />
         <activity android:name=".controller.gallery.GalleryActivity" />
         <activity android:name=".controller.discussion.user.DiscussionUserActivity" />
@@ -25,12 +24,6 @@
             android:label="@string/title_activity_login"
             android:theme="@style/Anniversaire.NoActionBar" />
         <activity android:name=".controller.messages.MessageActivity" />
-
-        <receiver android:name=".utils.AlarmReceiver">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
 
         <activity
             android:name=".controller.MainActivity"
